Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
